Uppdateringar i främst avsnitt 4.

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -103,7 +103,6 @@ Begreppet integration kan således ses som *en process där individer eller grup
 
 Andelen utrikes födda som är i arbetsför ålder (20-64 år) i Dalarna har ökat successivt över de senaste 20 åren, från `r andel_utrikes_min_ar` procent år `r andel_utrikes_inrikes_min_ar` till `r andel_utrikes_max_ar` procent år `r andel_utrikes_inrikes_max_ar`. Ökningen var särskilt tydlig under några år på mitten av 2010-talet, när många invandrade till Sverige och Dalarna. Utrikes födda är därför en förutsättning för att kunna kompetensförsörja arbetsmarknaden. 
 
-<span class = "kommentar">*Lägg in Diagram 2 från Kompetensförsörjningsrapporten - andelar inrikes/utrikes födda i arbetsför ålder*</span>
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
@@ -114,15 +113,13 @@ gg_andel_utrikes_inrikes$befolkning_utr_inr_andel_Dalarna
 
 2019 publicerade Region Dalarna rapporten [*Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv*](https://www.regiondalarna.se/contentassets/d845727dbc9f49c3b7b09a2c60456497/integrationsanalys.pdf){target="_blank"}.^[Region Dalarna. Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv. Regionala utvecklingsförvaltningens rapportserie #1, 2019.] Rapporten skrevs i en period där Sverige och Dalarna några år tidigare hade haft den största volymen av asylinvandring i historien. Därefter har asylinvandringen minskat och 2024 var den på en nivå som är den lägsta sedan 1985, vilket är en del i ett paradigmskifte från sittande regering att öka arbetskraftsinvandringen och minska asylinvandringen [(Regeringen, 2025)](https://www.regeringen.se/pressmeddelanden/2025/01/pressbriefing-om-migrationen-till-sverige-under-2024/){target="_blank"}.^[Regeringen. Pressbriefing om migrationen till Sverige under 2024. 2025-01-10.]
 
-Frågan är vad som har hänt under de sex år som gått sedan Region Dalarnas senaste rapport skrevs. Har integrationen utvecklats i en positiv riktning? 
+Frågan är hur integrationen har utvecklats under de sex år som gått sedan Region Dalarnas senaste rapport skrevs. Den här rapportens syfte är att redovisa aktuell statistik relaterat till utrikes föddas integration i samhället i Dalarna och visa på utvecklingen över tid. Rapporten kommer i stora drag följa 2019 års rapportdisposition. 
 
-Den här rapportens syfte är att redovisa aktuell statistik relaterat till utrikes föddas integration i samhället i Dalarna och visa på utvecklingen över tid. Rapporten kommer i stora drag följa 2019 års rapportdisposition, men tona ner delar som har med asylinvandringen att göra då den frågan inte längre är lika aktuell. 
-
-I rapporten från 2019 konstaterades även att det var en tydlig skiljelinje mellan utrikes födda och vad som ibland benämns som andra generationens invandrare respektive inrikes födda. Andra generationens invandrare hade såväl skolresultat som sysselsättningsgrad nära nivån för inrikes födda. Av den anledningen görs ingen uppdelning av inrikes födda i denna rapport. Det finns en fungerande integration i bemärkelsen att de som är födda i Sverige med utrikes födda föräldrar i betydligt högre utsträckning än utrikes födda är sysselsatta.<span class = "kommentar">Förklara detta tydligare.</span>
+I rapporten från 2019 konstaterades bl a att det var en tydlig skiljelinje i integrationen mellan utrikes födda å ena sidan och vad som ibland benämns som andra generationens invandrare respektive inrikes födda. Andra generationens invandrare, födda i Sverige med utrikes födda föräldrar, hade såväl skolresultat som sysselsättningsgrad nära nivån för inrikes födda. Distinktionen i denna rapport är därför mellan utrikes födda och inrikes födda, där gruppen andra generationens invandrare ingår.
 
 # Bakgrund
 
-<span class = "kommentar">*Vad behövs här för att introducera en bakgrundsbeskrivning av invandringen över tid?*</span>
+<span class = "kommentar">*Vad behövs här för att introducera en bakgrundsbeskrivning av invandringen över tid? Eller ska vi dela på bakgrundsavsnittet helt och ha ett första avsnitt som beskriver invandringen över tid följt av ett som beskriver den demografiska utvecklingen?*</span>
 
 ## Den utrikes födda befolkningen i Sverige och i Dalarna
 För att få en förståelse för den utrikes födda befolkningen i Dalarna och hur invandringen sett ut över tid, behöver situationen i riket som helhet analyseras. Arbetskraftsinvandringen, främst från Norden, tog fart efter andra världskriget och pågick fram till 1960-talets slut. I mitten av 1980-talet förändrades invandringens karaktär och fler flyktingar togs emot till följd av globala katastrofer. Från 1990-talet och framåt har krigssituationer i olika delar av världen föranlett en högre grad av flyktinginvandring med kriget i Syrien i mitten av 2010-talet som den tid då asylinvandringen nådde över 160 000 personer i Sverige. Därefter har antalet asylsökande minskat successivt och `r asylsokande_max_ar` sökte `r asylsokande_senaste_ar_antal` personer asyl i Sverige, vilket är det lägsta antalet sedan 1996.
@@ -370,9 +367,6 @@ gg_syssgrad_vistelsetid_utb$sysselsattningsgrad_inrikes_utrikes_utbniva
 ```
 
 Diagrammet nedan visar att sysselsättningsgraden för såväl inrikes som utrikes födda har ökat mellan `r syssgrad_tidsserie_forsta_ar` och `r syssgrad_tidsserie_senaste_ar`, men ökningen har varit klart störst för utrikes födda, från `r syssgrad_tidsserie_utrikes_min_ar` procent till `r syssgrad_tidsserie_utrikes_max_ar` procent. För inrikes födda har sysselsättningsgraden ökat från `r syssgrad_tidsserie_inrikes_min_ar` procent till `r syssgrad_tidsserie_inrikes_max_ar` procent under samma tidsperiod. Utrikes födda kommer således i arbete i mycket större utsträckning `r syssgrad_tidsserie_senaste_ar`, än de gjorde `r syssgrad_tidsserie_forsta_ar`.
-
-
-
 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
@@ -643,9 +637,12 @@ gg_etablering$etablering_tid
 
 
 # Vägen till (språk) och utbildning
-En fullgjord gymnasieutbildning är en av de viktigaste faktorerna för ett gott liv avseende en rad olika aspekter, såsom exempelvis hälsa, inkomst, medellivslängd och möjligheten till arbete. De med en längre utbildning lever i allmänhet längre, har en genomsnittlig högre inkomst och mår i allmänhet bättre än de med kortare utbildning. Utbildningsnivån hos utrikes födda har därför en stor påverkan för möjligheterna att etablera sig i samhället, särskilt bland de unga som anländer till Sverige under skolåren och har många år kvar i livet.
 
-Att gruppen utrikes födda är en heterogen grupp blir tydligt när utbildningsnivån studeras. Den stora skillnaden jämfört mot inrikes födda är att en större andel av de utrikes födda innehar enbart förgymnasial utbildning och en mindre andel innehar gymnasial utbildning. Andelen personer som har eftergymnasial utbildning är ungefär densamma för inrikes och utrikes födda. Arbetskraftsinvandrare är generellt sett mer högutbildade än flyktinginvandrare, och skillnaderna i utbildningsnivå är även stora mellan olika ursprungsländer.
+<span class = "kommentar">Den förra rapporten innehöll ingenting som handlade om språkutveckling eller språkutbildning. Kan vi hitta någon officiell information på den punkten? Annars bör avsnittet bara heta "Vägen till utbildning"</span>
+
+En fullgjord gymnasieutbildning är en av de viktigaste faktorerna för ett gott liv avseende en rad olika aspekter, såsom exempelvis hälsa, inkomst, medellivslängd och möjligheten till arbete. De med en längre utbildning lever i allmänhet längre, har en genomsnittlig högre inkomst och mår i allmänhet bättre än de med kortare utbildning. Utbildningsnivån hos utrikes födda har därför en stor påverkan på möjligheterna att etablera sig i samhället, särskilt bland de unga som anländer till Sverige under skolåren och har många år kvar i livet.
+
+Att gruppen utrikes födda är en heterogen grupp blir tydligt när utbildningsnivån studeras (se diagram nedan). Den stora skillnaden jämfört mot inrikes födda är att en större andel av de utrikes födda innehar enbart förgymnasial utbildning och en mindre andel innehar gymnasial utbildning. Andelen personer som har eftergymnasial utbildning är ungefär densamma för inrikes och utrikes födda. Det är en lite högre andel kvinnor födda i Sverige med eftergymnasial utbildning än utrikes födda, men bland män är förhållandet det omvända.  Arbetskraftsinvandrare är generellt sett mer högutbildade än flyktinginvandrare, och skillnaderna i utbildningsnivå är även stora mellan olika ursprungsländer.
 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
@@ -654,19 +651,29 @@ gg_utbniva_bakgrund$utbniva_inr_utr_kon_Dalarna_ar2023
 
 ```
 
-*Diagram - utbildningsnivå i Dalarna efter vistelsetid i Sverige*
+<span class = "kommentar">Justera diagramförklaring ovan till inrikes och utrikes födda?</span>
 
-Eftersom det finns stora skillnader i utbildningsbakgrund bland utrikes födda, är det svårt att tala om dem som en samlad grupp. Personer med låg- och hög utbildning stöter på olika typer av utmaningar på arbetsmarknaden. En aspekt som är viktig att beakta är att över 30 % av de som invandrat de senaste 11 åren har grundskolekompetens (förgymnasial) eller lägre utbildning. Samtidigt saknas det uppgifter om utbildningsnivå för en stor andel av de utrikes födda, speciellt för de som varit en kortare tid i landet. De utrikes födda i Dalarna som har bott i Sverige en längre tid har generellt sett en högre utbildningsnivå än de som invandrat de senaste åren. Huruvida detta beror på skillnader i utbildningsnivå vid invandring, eller att de med längre vistelsetid i större grad hunnit genomfört en utbildning i Sverige framgår inte av diagrammet. Sannolikt är det en kombination av dessa två faktorer.
+Eftersom det finns stora skillnader i utbildningsbakgrund bland utrikes födda, är det svårt att tala om dem som en samlad grupp. Personer med låg- och hög utbildning stöter på olika typer av utmaningar på arbetsmarknaden. En aspekt som är viktig att beakta är att <span class = "kommentar">över 30 % av de som invandrat de senaste 11 åren har grundskolekompetens (förgymnasial) eller lägre utbildning</span>. Samtidigt saknas det uppgifter om utbildningsnivå för en stor andel av de utrikes födda, speciellt för de som varit en kortare tid i landet. 
 
-*Diagram - Vistelsetid, utbildningsnivå och inträde på arbetsmarknaden*
+De utrikes födda i Dalarna som har bott i Sverige en längre tid har generellt sett en högre utbildningsnivå än de som invandrat de senaste åren. Huruvida detta beror på skillnader i utbildningsnivå vid invandring, eller att de med längre vistelsetid i större grad hunnit genomfört en utbildning i Sverige framgår inte av diagrammet. Sannolikt är det en kombination av dessa två faktorer.
 
-Idag behövs det enligt Arbetsförmedlingen i regel gymnasiekompetens för att ha en god chans att etablera sig på arbetsmarknaden, även när det gäller bristyrken.   Diagrammet ovan visar att vistelsetid i landet och utbildningsbakgrund i stor utsträckning påverkar hur stor andel personer som är sysselsatta. Generellt sett så har utrikes födda personer med låg utbildning svårare att etablera sig på arbetsmarknaden än de med gymnasieutbildning eller högre utbildning. En bidragande faktor kan vara att det finns få enkla jobb på den svenska arbetsmarknaden som inte kräver längre utbildning. År 2016 utgjordes 5 % av den förvärvsarbetande arbetskraften av yrken utan eller med kortare krav på utbildning och introduktion, vilket var lägst andel i hela EU.   För att möjliggöra att fler av de utrikes födda som flyttat till Dalarna de senaste åren ska arbeta, är det av största vikt att så många som möjligt tillgodogör sig en utbildning som efterfrågas av arbetsmarknaden.
+*Diagram 1 - utbildningsnivå i Dalarna efter vistelsetid i Sverige*
 
-Det finns flera tänkbara anledningar till att utrikes födda i genomsnitt presterar sämre på arbetsmarknaden, även när hänsyn tas till skillnader i utbildningsnivå. Några tänkbara förklaringar kan exempelvis vara lägre kunskapar om landet, språket och kulturen. För de som flyttat till Sverige av flyktingskäl kan traumatiska upplevelser också inverka. I både Sverige och övriga västvärlden finns det emellertid gott om indikationer på att diskriminering av personer med utländskt ursprung förekommer på arbetsmarknaden. En sak som pekar på detta är att de som är födda i Sverige med utrikes födda föräldrar presterar sämre på arbetsmarknaden än de med svensk bakgrund, även när hänsyn tas till skillnader i utbildningsnivå. Det är teoretiskt möjligt att andra faktorer kan påverka utfallet, men det förefaller föga troligt att skillnaderna skulle vara stora, utan att diskriminering förekommer i någon form.  Det finns emellertid empiriskt stöd för att diskriminering på arbetsmarknaden verkligen förekommer. Flera svenska studier har undersökt frågan genom att skicka fiktiva ansökningar med påhittade personer till ett stort antal utlysta jobb. Resultatet av studierna har varit att personer med mer svenskklingande namn har betydligt större sannolikhet att bli kallad till en arbetsintervju än personer med ett utländskt klingande namn, trots att ansökningarna i övrigt är i stort sett identiska.   De ekonomiska vinsterna för samhället skulle vara stora om skillnaderna i sysselsättning och medelinkomst, mellan inrikes och utrikes födda skulle utjämnas. I den mån diskriminering förklarar denna skillnad, finns det alltså stora vinster i att bekämpa den, både för samhället och för de utrikes födda själva.  
+*Diagram 2 - Vistelsetid, utbildningsnivå och inträde på arbetsmarknaden*
 
-Eftersom gymnasieutbildning är viktigt för möjligheten att etablera sig på arbetsmarknaden, är en viktig aspekt att undersöka hur stor andel av avgångseleverna i årskurs 9 i länet som är behöriga till att påbörja gymnasiestudier. Ofullständiga eller låga betyg är i första hand ett problem för den enskilde, då personens valmöjligheter begränsas och etableringen på arbetsmarknaden försvåras. Att en stor andel elever inte blir behöriga till gymnasiet kan även innebära ett samhällsproblem. Samhället misslyckas med att ta tillvara på elevernas potential om de inte når målen för utbildningen i skolan. Det finns även ett starkt samband mellan dåliga skolresultat och sociala problem. Enligt Socialstyrelsen är det 8 gånger större risk att varken arbeta eller studera för den som överhuvudtaget inte påbörjat gymnasiet, jämfört med en elev som har genomfört ett studieförberedande gymnasieprogram. Det finns även en stark överrisk att varken arbeta eller studera för den som har hoppat av gymnasiet, jämfört med den som har fullföljt en gymnasieutbildning. 
+<span class = "kommentar">Diagrammen 1 och 2 ovan behövs för att kunna justera texten i avsnittet.</span>
 
-*Diagram 26 - Dalarnas gymnasiebehörighet, kvinnor och män, inrikes och utrikes födda 2018 och 2023*
+Idag behövs det enligt Arbetsförmedlingen i regel gymnasiekompetens för att ha en god chans att etablera sig på arbetsmarknaden, även när det gäller bristyrken. 
+
+Diagrammet ovan visar att vistelsetid i landet och utbildningsbakgrund i stor utsträckning påverkar hur stor andel personer som är sysselsatta. Generellt sett så har utrikes födda personer med låg utbildning svårare att etablera sig på arbetsmarknaden än de med gymnasieutbildning eller högre utbildning. En bidragande faktor kan vara att det finns få enkla jobb på den svenska arbetsmarknaden som inte kräver längre utbildning. År 2016 utgjordes 5 % av den förvärvsarbetande arbetskraften av yrken utan eller med kortare krav på utbildning och introduktion, vilket var lägst andel i hela EU. För att möjliggöra att fler av de utrikes födda som flyttat till Dalarna de senaste åren ska arbeta, är det av största vikt att så många som möjligt tillgodogör sig en utbildning som efterfrågas av arbetsmarknaden.
+
+Det finns flera tänkbara anledningar till att utrikes födda i genomsnitt presterar sämre på arbetsmarknaden, även när hänsyn tas till skillnader i utbildningsnivå. Några tänkbara förklaringar kan exempelvis vara lägre kunskapar om landet, språket och kulturen. För de som flyttat till Sverige av flyktingskäl kan traumatiska upplevelser också inverka. I både Sverige och övriga västvärlden finns det emellertid gott om indikationer på att diskriminering av personer med utländskt ursprung förekommer på arbetsmarknaden. En sak som pekar på detta är att de som är födda i Sverige med utrikes födda föräldrar presterar sämre på arbetsmarknaden än de med svensk bakgrund, även när hänsyn tas till skillnader i utbildningsnivå. Det är teoretiskt möjligt att andra faktorer kan påverka utfallet, men det förefaller föga troligt att skillnaderna skulle vara stora, utan att diskriminering förekommer i någon form. Det finns emellertid empiriskt stöd för att diskriminering på arbetsmarknaden verkligen förekommer. Flera svenska studier har undersökt frågan genom att skicka fiktiva ansökningar med påhittade personer till ett stort antal utlysta jobb. Resultatet av studierna har varit att personer med mer svenskklingande namn har betydligt större sannolikhet att bli kallad till en arbetsintervju än personer med ett utländskt klingande namn, trots att ansökningarna i övrigt är i stort sett identiska. De ekonomiska vinsterna för samhället skulle vara stora om skillnaderna i sysselsättning och medelinkomst, mellan inrikes och utrikes födda skulle utjämnas. I den mån diskriminering förklarar denna skillnad, finns det alltså stora vinster i att bekämpa den, både för samhället och för de utrikes födda själva.
+
+<span class = "kommentar">Är ovanstående fortsatt relevant? Senare forskning på området?</span>
+
+Eftersom gymnasieutbildning är viktigt för möjligheten att etablera sig på arbetsmarknaden, är en viktig aspekt att undersöka hur stor andel av avgångseleverna i årskurs 9 i länet som är behöriga till att påbörja gymnasiestudier. Ofullständiga eller låga betyg är i första hand ett problem för den enskilde, då personens valmöjligheter begränsas och etableringen på arbetsmarknaden försvåras. Att en stor andel elever inte blir behöriga till gymnasiet kan även innebära ett samhällsproblem. Samhället misslyckas med att ta tillvara på elevernas potential om de inte når målen för utbildningen i skolan. Det finns även ett starkt samband mellan dåliga skolresultat och sociala problem. Enligt Socialstyrelsen är det 8 gånger större risk att varken arbeta eller studera för den som överhuvudtaget inte påbörjat gymnasiet, jämfört med en elev som har genomfört ett studieförberedande gymnasieprogram. Det finns även en stark överrisk att varken arbeta eller studera för den som har hoppat av gymnasiet, jämfört med den som har fullföljt en gymnasieutbildning.
+
+<span class = "kommentar">Är ovanstående fortsatt gällande?</span>
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
@@ -674,22 +681,20 @@ Eftersom gymnasieutbildning är viktigt för möjligheten att etablera sig på a
 
 ```
 
-Skillnaden i andelen behöriga till gymnasiet hos avgångselever i årskurs 9 mellan de med svensk och utländsk bakgrund var stor, både inom Dalarnas län och i riket som helhet. I Dalarna var 52 % av avgångseleverna med utländsk bakgrund och 88 % med svensk bakgrund behöriga till att påbörja gymnasiet. Siffrorna för riket var 58 % av eleverna med utländsk bakgrund och 91 % av eleverna med svensk bakgrund.
+Skillnaden i andelen behöriga till gymnasiet hos avgångselever i årskurs 9 mellan inrikes och utrikes födda är fortsatt stor i Dalarna. 2018 låg andelarna för såväl inrikes födda pojkar och flickor omkring 85-90 procent. De har förändrats marginellt fram till 2023. För utrikes födda flickor var andelen behöriga knappt 60 procent 2018 och har ökat till cirka 66 procent 2023. Utrikes födda pojkar har den mest positiva utvecklingen mellan åren, från knappt 48 procent till 68 procent. Det innebär att utrikes födda pojkar har en högre andel behöriga till gymnasiet än utrikes födda flickor år 2023. <span class = "kommentar">Uppdaterat.</span>
 
-När avgångseleverna i årskurs 9 år 2018 i riket studeras så påverkas andelen behöriga med utländsk bakgrund mycket av migrationsbakgrund. Skillnaderna i andelen behöriga är betydligt mindre mellan elever med utländsk och svensk bakgrund när förutsättningarna är mer likvärdiga. Vid en jämförelse var 91 procent av eleverna med svensk bakgrund behöriga och 86 procent av elever med utländsk bakgrund födda i Sverige behöriga, medan 85 procent av eleverna som invandrat före skolstart var behöriga. Bland elever i riket som invandrat i årskurs 1–5 var andelen behöriga elever däremot märkbart lägre och var 67 procent. Allra lägst i riket var behörigheten bland nyanlända som invandrat de senaste 4 åren eller saknade svenskt personnummer, där andelen behöriga elever var 28 procent. Enligt Skolverket har nyanlända elever en brant uppförsbacke. Att på en kort tid lära sig svenska språket och samtidigt utveckla ämneskunskaper är en svår utmaning. Skolverket anser att det behövs ett genomtänkt och målmedvetet arbete på skolorna och att skolor som tagit emot många nyanlända bör ges ett bra stöd.  Den primära orsaken till att en lägre andel utrikes födda elever i Dalarna än i riket är behöriga, är sannolikt att en större andel är nyanlända och har en kort vistelsetid i Sverige.
+I rapporten 2019 studerades avgångseleverna i årskurs 9 år 2018 och det var tydligt att andelen behöriga med utländsk bakgrund påverkades av migrationsbakgrund. Skillnaderna i andelen behöriga är betydligt mindre mellan elever med utländsk och svensk bakgrund när förutsättningarna är mer likvärdiga. Vid en jämförelse var 91 procent av eleverna med svensk bakgrund behöriga och 86 procent av elever med utländsk bakgrund födda i Sverige behöriga, medan 85 procent av eleverna som invandrat före skolstart var behöriga. Bland elever i riket som invandrat i årskurs 1–5 var andelen behöriga elever däremot märkbart lägre, 67 procent. Allra lägst i riket var behörigheten bland nyanlända som hade invandrat under perioden 2014-2018 eller saknade svenskt personnummer. Där var andelen behöriga elever 28 procent. <span class = "kommentar">Uppdaterat. Hänvisar till 2019 års rapport. </span>
 
-De avgångselever i årskurs 9 i Dalarna år 2018 som var utrikes födda var i betydligt lägre grad än inrikes födda behöriga till att påbörja gymnasiestudier. Skillnaden i kön var också störst bland utrikes födda elever, där 58 procent av flickorna och 47 procent av pojkarna var behöriga till gymnasiet. För elever födda i Sverige med en eller två utrikes födda föräldrar var andelen behöriga pojkar ungefär lika stor för som inrikes födda pojkar med två föräldrar födda i Sverige. Flickor födda i Sverige med två inrikes födda föräldrar var i högre grad behöriga till gymnasiet än inrikes födda flickor med en eller två utrikesfödda föräldrar.
-
-*Vistelsetid och betyg/behörigheter i skola och till gymnasium/högskola*
-Data för 0-1 år saknas (NA)
+[Mörtlund (2020)](https://www.ifau.se/Forskning/Publikationer/Rapporter/2020/arbetet-med-nyanlanda-elever-i-grundskolan/){target="_blank"}^[Mörtlund, Tove (2020). Arbetet med nyanlända elever i grundskolan. IFAU Rapport 2020:2.] noterade stora utmaningar i grundskolan att kvalitetssäkra undervisningen, trots instatser kring språk- och kunskapsutvecklande arbetssätt. Att på en kort tid lära sig svenska språket och samtidigt utveckla ämneskunskaper är en svår utmaning. <span class = "kommentar">Uppdaterat.</span>
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
  gg_gym_hogskola_behorighet$behorighet_gymnasiet_vistelsetid
 
 ```
+<span class = "kommentar">Data för 0-1 år saknas (NA)</span>
 
-Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistelsetid i Dalarna där behörigheten är större ju längre eleverna har vistats i Sverige. Precis som nationellt är det framförallt personer som har bott i landet fem år eller kortare som i betydligt lägre grad än de med svensk bakgrund som blir behöriga till att påbörja gymnasiet.
+Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistelsetid i Dalarna där behörigheten är större ju längre eleverna har vistats i Sverige. Behörigheten för elever som går ut årskurs 9 med en vistelsetid som är 10 år eller längre, är i det närmaste att likställa med behörigheten för inrikes födda. I gruppen med en vistelsetid mellan 4 och 9 år är behörigheten omkring 20 procentenheter lägre och i gruppen vistelsetid 2-3 år är den ytterligare drygt 20 procentenheter lägre (knappt 40 procent har gymnasiebehörighet). <span class = "kommentar">Uppdaterat.</span>
 
 En annan aspekt som är viktig att mäta är hur stor andel av avgångseleverna i gymnasiet som är behöriga till att påbörja högskolestudier. Även här är det en högre andel inrikes födda elever som är behöriga än utrikes födda. Skillnaderna är dock betydligt mindre än för avgångseleverna i årskurs 9. Något som är viktigt att beakta när detta studeras är att gymnasieskolan inte är obligatorisk, och att de som exempelvis har avbrutit gymnasiestudier eller läser in grundläggande gymnasiebehörighet inte omfattas av diagrammet. Samtliga av de utrikes födda elever i Dalarnas län som slutförde gymnasiet år 2018 hade längre än 4 års vistelsetid i Sverige.
 
