--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -698,8 +698,6 @@ Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistel
 
 En annan aspekt som är viktig att mäta är hur stor andel av avgångseleverna i gymnasiet som är behöriga till att påbörja högskolestudier. Även här är det en högre andel inrikes födda elever som är behöriga än utrikes födda. Skillnaderna är dock betydligt mindre än för avgångseleverna i årskurs 9. Något som är viktigt att beakta när detta studeras är att gymnasieskolan inte är obligatorisk, och att de som exempelvis har avbrutit gymnasiestudier eller läser in grundläggande gymnasiebehörighet inte omfattas av diagrammet. Samtliga av de utrikes födda elever i Dalarnas län som slutförde gymnasiet år 2018 hade längre än 4 års vistelsetid i Sverige.
 
-*Ev diagram 29 - behörighet till högskola*
-
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
  gg_gym_hogskola_behorighet$behorighet_högksola_jmf_ar
@@ -713,16 +711,11 @@ När andelen behöriga till högskolan undersöks så kan det vara av större re
 gg_utbniva_bakgrund_alder$utb_niva_bakgrund
 ```
 
-*Andelar obehöriga till gymnasiet - inskrivna på IM-program utifrån bakgrund*
-
-*Utrikes födda unga som inte studerar eller inte aktiva på arbetsmarknaden utifrån vistelsetid*
-
+<span class = "kommentar">Diagram över 1: Andelar obehöriga till gymnasiet - inskrivna på IM-program utifrån bakgrund och 2:Utrikes födda unga som inte studerar eller inte aktiva på arbetsmarknaden utifrån vistelsetid</span>
 
 
 # Vägen till bostad
 Med nästan alla sätt att mäta boende skiljer sig grupperna svensk och utländsk bakgrund åt. Det finns flera sätt att mäta boende på, typ av boende (villa eller lägenhet), boendeyta och bostadsägande säger alla någonting om hur människor bor, något som givetvis speglar den ekonomiska situation man lever i. Det innebär, precis som på de flesta andra områden, att gruppen utrikes födda kommer att ha en stor spridning avseende etablering i samhället. Några i gruppen kommer att ha bott i Sverige i mindre än ett år och andra i flera decennier. Således finns även inom boende anledning att göra analyser uppdelat på vistelsetid i Sverige. att människor som bott längre i Sverige i högre utsträckning äger sitt eget boende, antingen genom äganderätt (småhus) eller bostadsrätt (småhus eller lägenhet).
-
-*Diagram 30 - Boende per Upplåtelseform efter vistelsetid*
 
 ```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
 gg_boendetyp_upplatelseform$boendetyp_vistelsetid_inrikes
@@ -739,6 +732,8 @@ gg_trangboddhet$trangboddhet_antal_Dalarna
 ```
 
 De hushåll som är trångbodda i Dalarna utgör en liten andel av det totala antalet lägenhetshushåll, vilket framförallt beror på att få hushåll med inrikes födda är trångbodda (bara ungefär `r trangboddhet_sista_ar_inrikes_andel` procent år `r  trangboddhet_max_ar`). Bland hushåll med utrikes födda är en klart större andel trångbodda (ungefär `r trangboddhet_sista_ar_utrikes_andel` procent år `r trangboddhet_max_ar`). Sedan `r trangboddhet_min_ar` har antalet hushåll som är trångbodda minskat något för såväl inrikes som utrikes födda.
+
+<span class = "kommentar">Vad mer behövs kring boende? Nedanstående är inte justerat ännu.</span>
 
 *Diagram 32 - trångboddhet efter vistelsetid*
 
@@ -762,12 +757,12 @@ Skillnaden i boendeyta per person för personer med svensk och utländsk bakgrun
 
 Skillnaden mellan de med svensk och utländsk bakgrund är betydligt större för de som bor i flerbostadshus i samtliga åldersgrupper fram till 75+ år. Anledningen till detta kan bero på flera faktorer, som exempelvis att personer med svensk bakgrund har större möjlighet att påverka storleken på sin bostad, antingen genom att köpa en större bostad, en längre kötid, eller möjlighet att byta hyreskontrakt eller liknande. En annan förklaring är att personer med utländsk bakgrund i genomsnitt är en person mer i hushållet än personer med svensk bakgrund. Förutsatt samma boendeyta, får då personer med utländsk bakgrund automatiskt mindre boendeyta per person än de med svensk bakgrund. Det kan också finns skillnader i preferenser för hur stort man vill bo mellan de här två grupperna.
 
-# Flyttmönster (hur flyttar de utrikes födda?)
+# Flyttmönster (hur flyttar de utrikes födda?) - ej bearbetat
 Bland inrikes födda var det 94 263 personer mellan år 2002–2018 som flyttade till Dalarnas län från övriga Sverige och 99 304 som flyttade från länet till övriga Sverige, vilket gav ett flyttnetto på -5 041 personer, eller i genomsnitt -504 per år. I gruppen utrikes födda flyttade 19 819 personer till Dalarnas län från övriga Sverige och 23 912 personer flyttade till övriga Sverige från länet, vilket gav ett flyttnetto på -4 093 personer, eller i genomsnitt -410 per år. Det kan konstateras att flyttströmmarna har varit stora både till och från länet, både för utrikes och inrikes födda. Båda grupperna flyttar dock i större utsträckning från Dalarna till övriga Sverige än till Dalarna från övriga Sverige. Utrikes födda personer har generellt sätt varit mer benägna att flytta från länet än inrikes födda varit.
 
 Innan utrikes föddas flyttningar analyseras djupare kommer här först analys om inrikes flyttning till/från Dalarna generellt, och hur den skiljer sig i två olika åldersgrupper. Förmodligen är inrikes omflyttningar den faktor som på längre sikt mer än någon annan påverkar den regionala befolkningsstrukturen. Majoriteten av de som flyttar är unga mellan 20–35 år. I regioner med inflyttningsöverskott ökar därför antalet unga medan situationen är den motsatta i regioner med utflyttningsöverskott. Regioner som har en växande befolkning genom ett positivt flyttnetto, får en yngre befolkning och därmed även ett ökat barnafödande, med regionala födelseöverskott som följd.   Som konstaterat har flyttnettot inrikes till/från Dalarna varit negativt under de senaste tio åren. Främst gäller detta yngre vuxna som är mellan 19–28 år.
 
-Mellan år 2008 – 2018 var det i genomsnitt 793 fler personer per år som flyttade från Dalarna till övriga landet än till Dalarna i åldersgruppen 19–28 år, vilket gav ett negativt flyttnetto inrikes på -793 personer per år i åldersgruppen. För Dalarnas del är det till största del storstads- och universitetsstäder som den yngre befolkningen väljer att flytta till. Enligt en studie från Jönköpings universitet beror detta på en kombination av tillgång till högre utbildning, en stark arbetsmarknad och ett livsstilspaket som finns i större städer som den yngre generation anser vara attraktiv.  Ett perspektiv som brukar lyftas fram är att många flyttar tillbaka till sin hemkommun efter studier eller arbete i ett annat län. Ofta sammanfaller hemflytten med familjebildning. Denna föreställning stämmer till viss del och mellan år 2008–2018 var det i genomsnitt 138 fler personer per år som flyttade till Dalarna från övriga landet än från Dalarna i åldersgruppen 29–44 år, detta gav ett flyttöverskott på +138 personer i åldersgruppen. Summerat innebär detta att flyttnettot inrikes totalt för åldersgruppen 19–44 år var -654 personer per år i Dalarnas län. Det är viktigt att komma ihåg att antalet flyttningar är stort både till och från länet, och att det finns många mekanismer som påverkar varför vi flyttar. Totalt flyttade 69 153 personer till Dalarnas län från övriga landet, och 75 019 flyttade från Dalarnas län till övriga landet mellan 2008–2018.
+Mellan år 2008–2018 var det i genomsnitt 793 fler personer per år som flyttade från Dalarna till övriga landet än till Dalarna i åldersgruppen 19–28 år, vilket gav ett negativt flyttnetto inrikes på -793 personer per år i åldersgruppen. För Dalarnas del är det till största del storstads- och universitetsstäder som den yngre befolkningen väljer att flytta till. Enligt en studie från Jönköpings universitet beror detta på en kombination av tillgång till högre utbildning, en stark arbetsmarknad och ett livsstilspaket som finns i större städer som den yngre generation anser vara attraktiv.  Ett perspektiv som brukar lyftas fram är att många flyttar tillbaka till sin hemkommun efter studier eller arbete i ett annat län. Ofta sammanfaller hemflytten med familjebildning. Denna föreställning stämmer till viss del och mellan år 2008–2018 var det i genomsnitt 138 fler personer per år som flyttade till Dalarna från övriga landet än från Dalarna i åldersgruppen 29–44 år, detta gav ett flyttöverskott på +138 personer i åldersgruppen. Summerat innebär detta att flyttnettot inrikes totalt för åldersgruppen 19–44 år var -654 personer per år i Dalarnas län. Det är viktigt att komma ihåg att antalet flyttningar är stort både till och från länet, och att det finns många mekanismer som påverkar varför vi flyttar. Totalt flyttade 69 153 personer till Dalarnas län från övriga landet, och 75 019 flyttade från Dalarnas län till övriga landet mellan 2008–2018.
 
 När flyttnettot per år studeras kan det konstateras att det finns variationer över tid, men att den genomgående trenden är att flyttnettot mot övriga Sverige är negativt de flesta år både för inrikes och utrikes födda. Undantagen är år 2014 och 2015 när flyttnettot var positivt för utrikes födda och åren 2002, 2003, 2017 och 2018 när flyttnettot var positivt för inrikes födda.  Utflyttningen av utrikes födda till övriga Sverige har sedan ökat stort sedan år 2016. Anledningen en ökad invandring under dessa år. Ökningen har i sin tur ökat omflyttningarna för utrikes födda. Det kan konstateras att många av de som invandrat de senaste åren har valt att flytta från Dalarnas län. 
 
@@ -775,22 +770,20 @@ I syfte att kartlägga nyanlända flyktinginvandrares flyttningar i Sverige utar
 
 *Exkludera delarna om kvotflyktingar och anvisat boende*
 
-*Hur ser det ut med omflyttningar generellt bland utrikes födda de senaste 10 åren? Hur länge stannar de som flyttar in?*
-
-*Longitudinell studie utifrån vistelsetid i länet*
+*Hur ser det ut med omflyttningar generellt bland utrikes födda de senaste 10 åren? Hur länge stannar de som flyttar in? Kommer de som flyttar tillbaka?*
 
 Omflyttningarna bland utrikes födda åren 2015–2018 var i störst under de två första åren som de bodde i Sverige. Antalet flyttningar minskade därefter ju längre vistelsetiden blev i landet. Eftersom personer med en kort vistelsetid i allmänhet ännu inte är särskilt etablerade på en viss plats, är det inte överraskande att de flyttar i större utsträckning. Anledningarna till flytt kan vara anvisning till annan ort av Migrationsverket, arbete, studier, närhet till släktingar, större möjlighet till bostad eller andra anledningar.
 
 De med en kortare vistelsetid i Sverige på 0–2 år var de som flyttade i störst utsträckning mellan åren 2015–2018. Under år 2015 hade denna grupp en påtaglig högre inflyttning än under övriga år. En hypotes som behöver analyseras vidare är att detta kan bero på att många nyanlända personer med giltigt uppehållstånd år 2015 blev anvisade till Dalarna. Nära hälften av de inrikes inflyttade utrikes födda detta år med 0—2 års vistelsetid var antingen födda i Syrien eller Eritrea.  Trenden sedan år 2016 har sedan varit att fler av de nyanlända väljer att flytta från Dalarna än till länet från övriga Sverige. Eftersom denna trend även gällde före år 2014, finns det anledning att tro att utflyttningen av nyanlända med kort vistelsetid även i framtiden kommer att vara större än inflyttningen. Trenden är problematisk för Dalarnas del, då redan befintlig och framtida potentiel arbetskraft i och med detta försvinner från länet.
 
-# Demokrati och tillit
+# Demokrati och tillit (ska skrivas)
 
+## Tillit
 *Vad finns det för information att få kring demokrati och tillit?*
+*SoM-institutets tillitsmätningar - något att referera till?*
 
-*Kolla SCBs Integrations-del i statistikdatabasen*
 
-*Valdeltagande*
-
+## Valdeltagande
 ```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
 gg_valdeltagande_vistelsetid$Valdeltagande_i_val_till_riksdag
 ```
@@ -805,12 +798,9 @@ gg_valdeltagande_vistelsetid$Valdeltagande_i_val_till_kommun
 
 ```
 
-*SoM-institutets tillitsmätningar*
 
-Här ser vi hur man gör en länk: På nationell nivå har SCB jämfört den standardvägda lönen, dvs. lönen när hänsyn tas 
-till bland annat ålder och utbildningsnivå, för att synliggöra om det kan finnas en diskrimineringsaspekt i lönenivån. 
-Slutsatsen blev att kvinnors standardvägda lön är ungefär 95 procent av männens standardvägda lön, det vill säga det
-finns en oförklarad löneskillnad mellan kvinnor och män [(SCB)](<https://www.scb.se/hitta-statistik/statistik-efter-amne/arbetsmarknad/loner-och-arbetskostnader/lonestrukturstatistik-hela-ekonomin/pong/tabell-och-diagram/kvinnors-lon-i-procent-av-mans-lon-efter-sektor>)_blank.
+*Kolla SCBs Integrations-del i statistikdatabasen*
+
 
 
 # Sammanfattande diskussion
